--- a/src/css/components/DrilldownCards.css
+++ b/src/css/components/DrilldownCards.css
@@ -19,6 +19,10 @@
   display: inline-block;
   text-align: center;
   width: 100%;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  line-height: 32px;
+  margin: 0 0 1px;
 }
 
 .DrilldownCardContainer {
@@ -41,7 +45,8 @@
 }
 
 .DrilldownCardContent {
-  float: left;
+  float: right;
   width: 70%;
   margin-top: 10px;
+  white-space: wrap;
 }
